<resources>
    <string name="app_name">Calculator</string>
    <string name="description_image_profile">Image Profile</string>
    <string name="guilherme_peixoto">Guilherme Peixoto</string>
    <string name="about">Estudante de Graduação, Engenharia de Software no Instituto de Educação , Ciência e Tecnologia do Amazonas</string>
    <string name="city">Região Metropolitana de Manaus, Amazonas, Brasil</string>
    <string name="linkedin">LINKEDIN</string>
    <string name="github">GitHub</string>
    <string name="projects">Projects</string>
    <string name="about_menu">About</string>
    <string name="contact_menu">Contact</string>
    <string name="results_menu">Results</string>
</resources>