<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
            <ImageView
                android:id="@+id/imageView_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/description_image_profile"
                android:scaleType="centerInside"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/guilherme_peixoto"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_card_view"
        app:layout_constraintStart_toStartOf="@+id/profile_card_view"
        app:layout_constraintTop_toBottomOf="@+id/profile_card_view" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="@string/about"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <TextView
        android:id="@+id/textView_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="@string/city"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_about"
        app:layout_constraintStart_toStartOf="@+id/tv_about"
        app:layout_constraintTop_toBottomOf="@+id/tv_about" />

    <Button
        android:id="@+id/bt_linkedin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/linkedin"
        android:textSize="12sp"
        app:icon="@drawable/ic_linkedin"
        app:iconSize="14dp"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_city" />

    <Button
        android:id="@+id/bt_github"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/github"
        android:textSize="12sp"
        app:icon="@drawable/ic_logotipo_do_github"
        app:iconSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/textView_city" />

    <Space
        android:id="@+id/space"
        android:layout_width="50dp"
        android:layout_height="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_city" />

    <TextView
        android:id="@+id/textView_projects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/projects"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/listView_projects"
        app:layout_constraintEnd_toEndOf="@+id/tv_about"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_about"
        app:layout_constraintTop_toBottomOf="@+id/bt_linkedin" />

    <ListView
        android:id="@+id/listView_projects"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_projects"
        tools:listitem="@layout/list_projects" />

</androidx.constraintlayout.widget.ConstraintLayout>